--- a/ExpressJs/package.json
+++ b/ExpressJs/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "joi": "^17.13.3",
     "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.6.4"
   },
